--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Bootstrap demo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="css/style.css" rel="stylesheet"  
+    <link href="css/style.css" rel="stylesheet"> 
 </head>
 <body>
   <header>
@@ -29,6 +29,7 @@
               <input class="form-control me-2" type="search" placeholder="Pesquisar no App" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
+            <br>
             <div class="accordion" id="accordionPanelsStayOpenExample">
               <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -105,7 +106,62 @@
     </nav>
   </header>
   <main>
-
+      <div class="ajusteMain">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="card mb-3">
+                <img src="img/banner/BannerGoodPay.png" class="card-img-top" alt="Imagem de Banner Work For You">
+                <div class="card-body">
+                  <h5 class="card-title">Work for you</h5>
+                  <p class="card-text">
+                    Goodpay é uma aplicação de cash back focada em ASG (Agenda de Matriz Sustentavel), 
+                    assim reduzindo o volume de dinheiro impresso e capitalizando sobre o capital parado 
+                    e transformando em renda para micro comunidades de empreendimento ambiental. </p>
+                  <p class="card-text"><small class="text-muted">Publicado, 07 de julho 2022</small></p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="card mb-3">
+                <img src="img/banner/BannerGoodPay2.png" class="card-img-top" alt="Imagem de Banner Work For You">
+                <div class="card-body">
+                  <h5 class="card-title">100% de CDI</h5>
+                  <p class="card-text">
+                    Ao guardar seu dinheiro no fundo verde, você terá as melhores taxas
+                    de retorno e ainda um rendimento melhor que a poupança. Fora que os 
+                    fundos gerados por este recurso são investidos em cooperativas de 
+                    reciclagem.
+                  </p>
+                </div>            
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="card mb-3">
+                <img src="img/banner/BannerGoodPay3.png" class="card-img-top" alt="Imagem de Banner Work For You">
+                <div class="card-body">
+                  <h5 class="card-title">The Pig Time</h5>
+                  <p class="card-text">
+                    Ao utilizar o sistema de investimento com aniversário você
+                    aumenta consideravelmente seus lucros, porém tem que agendar uma data
+                    para quebrar o cofre, nesta data coletará os lucros acumulados e o
+                    capital novamente, aqui garantimos em investimentos de 1 ano 7% do retorno geral
+                    somado aos dividendos. " -Bora poupar no Pig Time" 
+                  </p>
+                </div>
+              </div>            
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
   </main>
   <footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
